added be grimsical

--- a/projects.json
+++ b/projects.json
@@ -15,8 +15,8 @@
         "status" : "In Progress",
         "description" : "In my spare time, I am writing a comic book. I will also have products involved with the comic. Here you can find all my social media links and see some of my drawings and story examples.",
         "languages" : "HTML, JS, CSS",
-        "image" : "images/thumbs/pacm-man-clock.jpg",
-        "url" : "/apps/retro_clock/",
+        "image" : "images/thumbs/begrimsical.jpg",
+        "url" : "https://begrimsical.com/",
         "active" : true
     },
     {
